# OpenVFX

./: .gitignore  CONTRIBUTING.md  Makefile  PROGRESS.md  README.md  byom-video.yaml  go.mod  install.sh
.claude/: settings.local.json
.github/: pull_request_template.md
docs/: README.md  agent-safety.md  agent.md  architecture.md  batch.md  cleanup.md  config.md  creative-plans.md  creative-tools.md  demo.md  limitations.md  model-router.md  models.md  plan-revisions.md  presets.md  quickstart.md  release-checklist.md  retry.md  roadmap.md  runs.md  security.md  watch.md
examples/: README.md
scripts/: make-fixture.sh  release-smoke.sh  smoke-agent-approval.sh  smoke-agent-expanded.sh  smoke-agent-goal-aware.sh  smoke-agent-plan.sh  smoke-agent-result.sh  smoke-batch.sh  smoke-chunks.sh  smoke-clip-cards.sh  smoke-creative-assemble-media.sh  smoke-creative-assemble.sh  smoke-creative-plan-approval.sh  smoke-creative-stub-execution.sh  smoke-creative-timeline.sh  smoke-creative-tools.sh  smoke-dynamic-models.sh  smoke-expand-stub.sh  smoke-export-handoff.sh  smoke-export-plan.sh  smoke-external-install.sh  smoke-goal-aware.sh  smoke-mask-decision-route-preview.sh  smoke-mask-plan.sh  smoke-model-mask.sh  smoke-model-request-review.sh  smoke-model-router-dryrun.sh  smoke-ollama-dryrun.sh  smoke-ollama-real.sh  smoke-pipeline.sh  smoke-plan-artifacts.sh  smoke-plan-revision.sh  smoke-report-export.sh  smoke-retry-cleanup.sh  smoke-roughcut.sh  smoke-runs.sh  (+5 more)
workers/: pyproject.toml
workers/byom_video_workers/: __init__.py  cli.py  transcribe.py  transcribe_stub.py
(+290 files in other folders)
